initial deploy commit

--- a/src/test.html
+++ b/src/test.html
@@ -48,3 +48,75 @@
   </div>
 </body>
 </div>
+
+
+
+
+
+
+
+sdfasdfsafdsafsd
+
+
+
+
+<Jumbotron style={ jumboStyle }>
+
+  <div class="d-flex justify-content-around">
+  <div class="p-2">
+  <header class="masthead bg-primary text-white text-center">
+      <div class="container d-flex align-items-center flex-column">
+
+          <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
+
+          <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+
+          <div class="divider-custom divider-light">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+              <div class="divider-custom-line"></div>
+          </div>
+
+          <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+      </div>
+  </header>
+
+  <header class="masthead bg-primary text-white text-center">
+
+  <h1>Hi, my name is Sebastian</h1>
+  </header>
+  <ExampleExpand />
+  <p>
+    This is a simple hero unit, a simple jumbotron-style component for calling
+    extra attention to featured content or information.
+  </p>
+  <p>
+    <Button variant="primary">Learn more</Button>
+    <h1 className="header">Welcome To React-Bootstrap</h1>
+    <ContactToast>
+      We now have Toasts
+      <span role="img" aria-label="tada">
+        🎉
+      </span>
+    </ContactToast>
+  </p>
+  </div>
+  </div>
+</Jumbotron>
+
+<Container>
+  <Row>
+    <Col>1 of 2</Col>
+    <Col>2 of 2</Col>
+  </Row>
+  <Row>
+    <Col>1 of 3</Col>
+    <Col>2 of 3</Col>
+    <Col>3 of 3</Col>
+  </Row>
+</Container>
+<div class="d-flex justify-content-center">
+<div class="p-2">Flex item 1</div>
+  <div class="p-2">Flex item 2</div>
+  <div class="p-2">Flex item 3</div>
+</div>
