another form fix because it keeps not being fixed

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" id="name" />
-  <input type="email" id="email" />
-  <textarea id="message"></textarea>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <textarea name="message"></textarea>
 </form>
     <div id="root"></div>
     <!--
